--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </section>
         <section class="about" id="about">
             <div>
-                <img src="image/image 1.png">
+                <img src="image 1.png">
             </div>
             <div>
                 <h2>Welcome To Dough It Up!</h2>
