--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <div class="logo">
-                <img src="image/image 1.png">
+                <img src="image 1.png">
             </div>
             <nav>
                 <a href="#home"><i class="fa fa-home"></i>Home</a>
