--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <div class="logo">
-                <img src="image/image 1.png">
+                <img src="image 1.png">
             </div>
             <nav>
                 <a href="#home"><i class="fa fa-home"></i>Home</a>
@@ -26,7 +26,7 @@
         </section>
         <section class="about" id="about">
             <div>
-                <img src="image/image 1.png">
+                <img src="image 1.png">
             </div>
             <div>
                 <h2>Welcome To Dough It Up!</h2>
@@ -38,7 +38,7 @@
             <div class="breadbg1">
                 <div class="bread1">
                     <div>
-                        <img src="image/bread 1.png">
+                        <img src="bread 1.png">
                     </div>
                     <h2>Sourdough Bread</h2>
                     <p>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="bread2">
                     <div>
-                        <img src="image/bread 2.png">
+                        <img src="bread 2.png">
                     </div>
                     <h2>Cranberry Walnut Sourdough Bread</h2>
                     <p>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="bread3">
                     <div>
-                        <img src="image/bread 3.png">
+                        <img src="bread 3.png">
                     </div>
                     <h2>Herb & Cheese Sourdough Bread</h2>
                     <p>
@@ -73,7 +73,7 @@
             <div class="breadbg2">
                 <div class="bread4">
                     <div>
-                        <img src="image/bread 4.png">
+                        <img src="bread 4.png">
                     </div>
                     <h2>Dark Chocolate Sourdough Bread</h2>
                     <p>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="bread5">
                     <div>
-                        <img src="image/bread 5.png">
+                        <img src="bread 5.png">
                     </div>
                     <h2>Apple Cinnamon Sourdough Bread</h2>
                     <p>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="bread6">
                     <div>
-                        <img src="image/bread 6.png">
+                        <img src="bread 6.png">
                     </div>
                     <h2>Olive Sourdough Bread</h2>
                     <p>
@@ -108,7 +108,7 @@
             <div class="workshop">
                 <div class="package1">
                     <div>
-                        <img src="image/basic hands-on.png">
+                        <img src="basic hands-on.png">
                     </div>
                     <h2>Basic Hands-On Package</h2>
                     <p>
@@ -119,7 +119,7 @@
                 </div>
                 <div class="package2">
                     <div>
-                        <img src="image/kids.png">
+                        <img src="kids.png">
                     </div>
                     <h2>Fun With Kids Package</h2>
                     <p>
@@ -130,7 +130,7 @@
                 </div>
                 <div class="package3">
                     <div>
-                        <img src="image/private class.png">
+                        <img src="private class.png">
                     </div>
                     <h2>Private Class Package</h2>
                     <p>
@@ -144,7 +144,7 @@
         <section class="contact" id="contact">
             <div class="card">
                 <div>
-                    <img src="image/image 1.png">
+                    <img src="image 1.png">
                 </div>
                 <div>
                     <p>
